# LPXImage

./: .gitignore  CMakeLists.txt  GITHUB_ISSUE.md  INSTALL_LOCAL.md  INSTALL_PYTHON.md  LICENSE.md  LogPolarImages.md  MacToolchain.cmake  README.md  STARTUP_TIMING_ISSUE_ANALYSIS.md  ScanTables63  TIMING_DIAGNOSTICS_README.md  apply_timing_diagnostics.sh  binding.gyp  build_with_version.sh  check_constant.cpp  check_throttle_value.cpp  create_test_video.py  debug_startup_timing.py  force_fresh_build.sh  index.js  install_local.sh  liblpx_image.1.0.0.dylib  linux_error.txt  lpx_image.js  lpx_server.js  package.json  perf_test.sh  scan_timing_patch.patch  server.js  setup.py  test_8_keypresses.py  test_client_simple.py  test_color_fix.py  test_delay_source.py  test_keypress_timing.py  test_movement_binding.py  test_movement_commands.py  test_optimized_client.py  test_saccade_injection.py  (+4 more)
.github/workflows/: CI.yaml  build_and_test.yml
cmake/: clean.cmake  pre_install_cleanup.cmake
docs/: LPXImage_Module_Documentation.md
examples/: BUG_FIXES_SUMMARY.md  README_STREAMING.md  WASD_INTEGRATION_CHANGES.md  capture_server_trace.py  catch_slow_startup.py  crash_log.txt  current_test_log.txt  debug_connection.py  debug_keyboard.py  debug_slow_startup.py  lpx_demo.py  lpx_file_server.py  lpx_file_server_clean.py  lpx_file_server_fixed.py  lpx_file_server_improved.py  lpx_file_server_py.py  lpx_renderer.py  lpx_renderer_improved.py  lpx_renderer_killable.py  lpx_renderer_simple.py  lpx_server.py  lpx_server_killable.py  lpx_stream_demo.py  quick_movement_test.py  server_log.txt  test_bug_fixes.py  test_connection_methods.py  test_detailed_bottleneck.py  test_file_server.py  test_first_frame_delay.py  test_first_frame_with_server_trace.py  test_movement_bounds.py  test_performance_bottleneck.py  test_startup_delays.py  test_sync.py  test_timing.py  test_version_display.py  test_wasd.py  test_wasd_commands.py  test_wasd_integration.py  (+3 more)
include/: lpx_common.h  lpx_constants.h  lpx_file_server.h  lpx_image.h  lpx_mt.h  lpx_optimized.h  lpx_renderer.h  lpx_utils.h  lpx_version.h  lpx_vision.h  lpx_vision_core.h  lpx_vision_utils.h  lpx_webcam_server.h
lib/: liblpx_image.1.dylib
lpximage.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
node_addon/: lpx_addon.cpp
python/: CMakeLists.txt  FRAME_SYNC_FIX_SUMMARY.md  README.md  lpx_bindings.cpp
scripts/: clean.sh  clean_all.sh  clean_all_lpx.sh  fix_macos_paths.sh  rebuild.sh  setup_python.sh
src/: lpx_file_server.cpp  lpx_globals.cpp  lpx_image.cpp  lpx_renderer.cpp  lpx_version.cpp  lpx_vision.cpp  lpx_vision_core.cpp  lpx_vision_utils.cpp  lpx_web_server.cpp  lpx_webcam_server.cpp  main_debug_renderer.cpp  main_file_server.cpp  main_webcam_server.cpp  mt_lpx_image.cpp  mt_lpx_renderer.cpp  optimized_scan.cpp  test_lpx.cpp  test_mt_lpx.cpp  test_opencv.cpp
src_bak/: lpx_image.cpp  lpx_logging.cpp  lpx_renderer.cpp  lpx_web_server.cpp  mt_lpx_image.cpp  mt_lpx_renderer.cpp  test_lpx.cpp  test_mt_lpx.cpp
test/: test_basic_import.py  test_error_handling.py  test_image_transformation.py  test_init_scan.py  test_lpx_renderer.py  test_lpx_tables.py  test_renderer_docs_fixed.py  test_server_client_full.py  test_server_client_simple.py  test_tables_docs_fixed.py  test_webcam_server.py
